# kds

./: .env.default.backup  .env.development  .env.docker  .env.production.example  .env.production.template  .env.staging  .env.test  .gitignore  .last-deployment-images  API.md  API_ENDPOINTS.md  ARCHITECTURE.md  COMPLETE_IMPLEMENTATION_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DESKTOP_APP_GUIDE.md  DESKTOP_QUICK_START.md  DOCKER_DEPLOYMENT.md  DOCKER_UPDATE_COMPLETE.md  DOCKER_UPDATE_SUMMARY.md  DOCUMENTATION_INDEX.md  ENVIRONMENT_SETUP_GUIDE.md  GET_PAYMENT_CREDENTIALS.md  HIGH_PRIORITY_FEATURES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PAYMENT_INVOICE_IMPLEMENTATION.md  PAYMENT_QUICKSTART.md  PAYMENT_SYSTEM_IMPLEMENTATION_SUMMARY.md  PRODUCTION_PAYMENT_SETUP_GUIDE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  README_SUBSCRIPTION_SYSTEM.md  SECURITY_IMPROVEMENTS.md  SETUP.md  deploy.sh  docker-compose.beta.yml  docker-compose.color.yml  docker-compose.data.yml  (+15 more)
.claude/: settings.local.json
.github/: DESKTOP_APP_SETUP.md  ISSUE_DEPLOYMENT_CONFIG.md  SECRETS_SETUP.md
apps/kds-kiosk/src-tauri/: Cargo.toml  tauri.conf.json
apps/kds-kiosk/src-tauri/capabilities/: default.json
apps/kds-kiosk/src-tauri/src/: main.rs
apps/local-bridge-agent/: Cargo.toml  README.md  gmp3.toml.example
apps/local-bridge-agent/src/: cloud_ws.rs  command_queue.rs  config.rs  health.rs  lib.rs  main.rs  offline_cache.rs  telemetry.rs  updater.rs
apps/local-bridge-agent/src/drivers/: escpos.rs  ingenico_iwl.rs  mod.rs  yazarkasa_hugin.rs
apps/local-bridge-agent/src/drivers/gmp3/: mod.rs  profiles.rs  protocol.rs  transport.rs
apps/local-bridge-agent/tests/: command_queue_integration.rs
backend/: .dockerignore  .env.example  .env.production.template  .env.staging.template  .eslintrc.js  .gitignore  Dockerfile  SUBSCRIPTION_SYSTEM.md  apply-migration-fixed.ts  apply-migration.ts  attach-test-image.ts  check-db-state.ts  check-products.ts  complete-migration.ts  fix-and-restart.sh  fix-product-images.ts  migration.sql  package-lock.json  package.json  schema.sql  seed-prod.js  seed.sql  test-prisma-connection.js  tsconfig.eslint.json  tsconfig.json  webpack.config.js
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: bluetooth.rs  lib.rs  main.rs
desktop/src-tauri/src/escpos/: codepage.rs  mod.rs
desktop/src-tauri/src/hardware/: config.rs  events.rs  mod.rs  status.rs
desktop/src-tauri/src/hardware/connection/: mod.rs
developer/: .dockerignore  Dockerfile  middleware.ts  next.config.mjs  package.json  theme.config.tsx
docs/: CI-CD-SETUP.md  CODE_REVIEW.md  CUSTOMER_PAYMENT_IMPLEMENTATION.md  DEPLOYMENT.md  EMAIL_SETUP.md  FINAL_COMPLETION_SUMMARY.md  GITHUB_SECRETS.md  IMPLEMENTATION_SUMMARY.md  PAZARLAMACI_REHBERI.md  SECURITY_LEAKED_SECRETS_RUNBOOK.md  SENTRY_SETUP.md  SISTEM_TANITIMI.md  TESTING_GUIDE.md  YONETICI_REHBERI.md  e2e-test-plan.md  partner-display-api.md  tedarik-checklist.md
edge-device-cpp/: .gitignore  CMakeLists.txt
edge-device-cpp/config/: config.yaml
edge-device-cpp/docker/: Dockerfile.jetson  kds-edge-device.service
edge-device-cpp/src/: args.cpp  args.hpp  config.cpp  config.hpp  main.cpp
edge-device-cpp/src/calibration/: homography.cpp  homography.hpp
edge-device-cpp/src/camera/: frame.hpp  frame_buffer.cpp  frame_buffer.hpp  frame_dispatcher.hpp  frame_source.hpp  rtsp_client.cpp  rtsp_client.hpp
edge-device-cpp/src/communication/: reconnect_policy.hpp  socketio_router.cpp  socketio_router.hpp  transport.hpp  types.hpp  websocket_client.cpp  websocket_client.hpp
edge-device-cpp/src/detection/: inference_engine.hpp  tracker.cpp  tracker.hpp  types.hpp  yolo_postprocess.cpp  yolo_postprocess.hpp  yolo_tensorrt.cpp  yolo_tensorrt.hpp
edge-device-cpp/src/utils/: logger.cpp  logger.hpp  nms.cpp  nms.hpp
edge-device-cpp/tests/: CMakeLists.txt  fakes.hpp  test_args.cpp  test_camera.cpp  test_config.cpp  test_inference.cpp  test_main.cpp  test_transport.cpp  test_util.hpp
edge-device-cpp/training/configs/: restaurant_dataset.yaml  training_config.yaml
edge-device-cpp/training/scripts/: collect_data.py  evaluate.py  export_onnx.py  train_detector.py
frontend/: .dockerignore  .env.example  .eslintrc.cjs  DESIGN_SYSTEM.md  Dockerfile  I18N_IMPLEMENTATION_SUMMARY.md  fix-cart-store.js  generate-icons-proper.cjs  generate-icons.cjs  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/.tauri/: hummytummy.key.pub
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: .gitkeep  README.md  icon.icns
frontend/src-tauri/src/: main.rs
frontend/src-tauri/src/commands/: barcode_commands.rs  hardware_commands.rs  mod.rs  pager_commands.rs  printer_commands.rs
frontend/src-tauri/src/hardware/: errors.rs  mod.rs
frontend/src-tauri/src/hardware/api/: backend_client.rs  mod.rs
frontend/src-tauri/src/hardware/config/: device_config.rs  mod.rs  registry.rs
frontend/src-tauri/src/hardware/connections/: bluetooth.rs  connection.rs  mod.rs  network.rs  serial.rs  usb_hid.rs
frontend/src-tauri/src/hardware/devices/: mod.rs
frontend/src-tauri/src/hardware/devices/barcode_readers/: generic.rs  mod.rs
frontend/src-tauri/src/hardware/devices/cash_drawers/: generic.rs  mod.rs
frontend/src-tauri/src/hardware/devices/pagers/: generic.rs  mod.rs
frontend/src-tauri/src/hardware/devices/printers/: escpos.rs  mod.rs
frontend/src-tauri/src/hardware/events/: emitter.rs  event.rs  mod.rs
frontend/src-tauri/src/hardware/factory/: connection_factory.rs  device_factory.rs  mod.rs
frontend/src-tauri/src/hardware/manager/: hardware_manager.rs  mod.rs
frontend/src-tauri/src/hardware/traits/: barcode_reader.rs  cash_drawer.rs  device.rs  mod.rs  pager.rs  printer.rs
help/: .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  theme.config.tsx
kds-marketing/: README.md  (+1 more)
(+3576 files in other folders)
