[package]
name = "hummytummy-desktop"
version = "0.1.0"
description = "HummyTummy Restaurant POS Desktop Application"
authors = ["HummyTummy Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Library target exposing the hardware/Bluetooth logic so `cargo test --lib`
# can build and run the unit tests WITHOUT the binary's `generate_context!`
# macro (which needs a built `../dist` frontend + app icons). Standard Tauri
# layout; behavior-preserving — the binary keeps its own module copies.
[lib]
name = "hummytummy_desktop"
path = "src/lib.rs"

[[bin]]
name = "hummytummy-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# `tauri` is optional and gated behind the default `app` feature. The binary
# (the actual desktop app) builds with default features and links Tauri +
# webkit2gtk as usual — production is unchanged. `cargo test --lib
# --no-default-features` drops Tauri so the hardware-logic unit tests link
# WITHOUT needing the webkit2gtk system libs (which a bare CI box lacks).
tauri = { version = "1.5", features = [ "protocol-asset", "shell-open"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
btleplug = "0.11"
uuid = "1.6"
thiserror = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
# `async fn` in the `BleAdapter` trait — the trait is stored as a concrete
# generic (BluetoothManager<A>) but uses async methods that must be
# object-safe-friendly and Send; async-trait wraps them into boxed futures.
async-trait = "0.1"

[dev-dependencies]
# Scratch directories for the path-injected config load/save tests so they
# run on a temp dir instead of the user's real `~/.kds`.
tempfile = "3"

[features]
default = ["app"]
# The `app` feature pulls in Tauri and compiles the Tauri-bound code (the
# binary's command handlers and `hardware::events`). It is ON by default so a
# plain `cargo build` / `cargo tauri build` produces the real desktop app.
# Turning it OFF (`--no-default-features`) compiles only the hardware logic +
# its unit tests, with no Tauri/webkit linkage.
app = ["dep:tauri"]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
