[package]
name = "hummytummy"
version = "1.0.0"
description = "HummyTummy Restaurant Management Desktop Application"
authors = ["Your Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Connection types
serialport = "4.3"
tokio-serial = "5.4"
hidapi = { version = "2.6", features = ["linux-static-hidraw"] }
btleplug = "0.11"

# Networking
reqwest = { version = "0.12", features = ["json"] }

# ESC/POS printing
escpos = "0.14"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
